--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "source-sans-pro": "^3.6.0",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
